gateway/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth.auth.svc.cluster.local:9000/auth"
#    nginx.ingress.kubernetes.io/auth-signin: "http://$host/signin"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User,X-Email,X-UserId,X-First-Name,X-Last-Name"
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /users/me
        pathType: Prefix
        backend:
          service:
            name: user-profile-app
            port:
              number: 80
      - path: /info
        pathType: Prefix
        backend:
          service:
            name: user-profile-app
            port:
              number: 80
